--- a/Sito 1 html.css
+++ b/Sito 1 html.css
@@ -1,8 +1,13 @@
+<!DOCTYPE html>
+<html lang="en">
 <html>
     <head> 
-        <title>Tranquillitea</title>
+        <title>Auntea</title>
         </head>
         <body>
-            <h1>Percorso di crescita personale</h1>
+            <h1>Personal growth</h1>
             </body>
+<footer> 
+<p>&copy; 2024 Auntea. All rights deserved. </p>
+</footer>
     </html>
